force-app/main/default/objects/NI_Product_Commitment__c/NI_Product_Commitment__c.object-meta.xml
<CustomObject>
    <description>Salesforce.com Change Request: NICC-008718

This object tracks commitments made by the Product team.  Commitments are realized by Marquee Features delivered in Product Releases.</description>
    <label>Product Commitment</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Summary Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Commitments</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>