force-app/main/default/objects/NI_Product_Commitment__c/fields/Commitment_Details__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Commitment Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>