force-app/main/default/objects/NI_Product_Commitment__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Commitments</relationshipLabel>
    <relationshipName>Product_Commitments</relationshipName>
    <type>Lookup</type>
</CustomField>