force-app/main/default/objects/NI_Product_Commitment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Proposed</fullName>
                <default>true</default>
                <label>Proposed</label>
            </value>
            <value>
                <fullName>Development Planning</fullName>
            </value>
            <value>
                <fullName>Executing</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>