force-app/main/default/objects/NI_Product_Commitment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Committed_to_Deliver_By__c</columns>
    <columns>Related_Account__c</columns>
    <columns>Related_Change_Request__c</columns>
    <columns>Related_Stakeholder__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>