force-app/main/default/objects/NI_Product_Commitment__c/listViews/Delphi_fdc.listView-meta.xml
<ListView>
    <fullName>Delphi_fdc</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>NAME</columns>
    <columns>Commitment_Details__c</columns>
    <columns>Status__c</columns>
    <columns>Committed_to_Deliver_By__c</columns>
    <columns>Impacted_Products__c</columns>
    <columns>Related_Account__c</columns>
    <columns>Related_Opportunity__c</columns>
    <columns>Related_Stakeholder__c</columns>
    <columns>Related_Change_Request__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Impacted_Products__c</field>
        <operation>includes</operation>
        <value>Delphi.fdc</value>
    </filters>
    <label>Delphi.fdc</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>