force-app/main/default/objects/NI_Product_Commitment__c/listViews/eCommerce_Art.listView-meta.xml
<ListView>
    <fullName>eCommerce_Art</fullName>
    <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8</booleanFilter>
    <columns>NAME</columns>
    <columns>Commitment_Details__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Impacted_Products__c</field>
        <operation>includes</operation>
        <value>iPlan</value>
    </filters>
    <filters>
        <field>Impacted_Products__c</field>
        <operation>includes</operation>
        <value>MeetingMatrix</value>
    </filters>
    <filters>
        <field>Impacted_Products__c</field>
        <operation>includes</operation>
        <value>MeetingBroker</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>MeetingBroker</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>iPlan</value>
    </filters>
    <filters>
        <field>Impacted_Products__c</field>
        <operation>includes</operation>
        <value>Direct Book</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Direct Book</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>MeetingMatrix</value>
    </filters>
    <label>eCommerce Art</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>