force-app/main/default/objects/NI_Product_Commitment__c/listViews/Integrations_Interfaces.listView-meta.xml
<ListView>
    <fullName>Integrations_Interfaces</fullName>
    <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
    <columns>NAME</columns>
    <columns>Commitment_Details__c</columns>
    <columns>Status__c</columns>
    <columns>Committed_to_Deliver_By__c</columns>
    <columns>Impacted_Products__c</columns>
    <columns>Related_Account__c</columns>
    <columns>Related_Opportunity__c</columns>
    <columns>Related_Stakeholder__c</columns>
    <columns>Related_Change_Request__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Impacted_Products__c</field>
        <operation>includes</operation>
        <value>HMS Interfaces</value>
    </filters>
    <filters>
        <field>Impacted_Products__c</field>
        <operation>includes</operation>
        <value>HRM - PMS</value>
    </filters>
    <filters>
        <field>Impacted_Products__c</field>
        <operation>includes</operation>
        <value>Other Interfaces</value>
    </filters>
    <filters>
        <field>Impacted_Products__c</field>
        <operation>includes</operation>
        <value>PMS Interfaces</value>
    </filters>
    <filters>
        <field>Impacted_Products__c</field>
        <operation>includes</operation>
        <value>RMS Interfaces</value>
    </filters>
    <label>Integrations / Interfaces</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>